--- a/ansible/install_applications/roles/infra-unifi.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-unifi.deploy/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Ensure Unifi image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    base_image: "{{ unifi.base_image }}"
+    private_image: "{{ unifi.container.image }}"
+
 - name: Deploy Unifi
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
