--- a/ansible/install_applications/vars/home-homeassistant.yml
+++ b/ansible/install_applications/vars/home-homeassistant.yml
@@ -1,13 +1,18 @@
 ---
 
+# To avoid loops inside homeassistant
+_homeassistant_var_loader:
+  base_image:
+    name: homeassistant/home-assistant
+    tag: "0.98.2"
+
 homeassistant:
   enabled: "{{ homeassistant_enabled | default(True) }}"
   
+  base_image: "{{ _homeassistant_var_loader.base_image }}"
+
   container:
-    image: "{{ docker_registry.url }}/homeassistant"
-    tag: "latest"
-    from_image: "homeassistant/home-assistant"
-    from_tag: "0.98.2"
+    image: "{{ docker_registry.url }}/{{ _homeassistant_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _homeassistant_var_loader.base_image.tag }}-custom"
     requests_cpu: "{{ homeassistant_homeassistant_container_requests_cpu | default('500m') }}"
     requests_memory: "{{ homeassistant_homeassistant_container_requests_memory | default('512Mi') }}"
     limits_cpu: "{{ homeassistant_homeassistant_container_limits_cpu | default('1000m') }}"
@@ -40,10 +45,16 @@ homeassistant:
   serial_remote_devices: "{{ homeassistant_serial_remote_devices | default({}) }}"
 
 
-homeassistant_mysql:
-  container:
-    image: "mysql"
+# To avoid loops inside homeassistant_mysql
+_homeassistant_mysql_var_loader:
+  base_image:
+    name: "mysql"
     tag: "5.7.27"
+
+homeassistant_mysql:
+  base_image: "{{ _homeassistant_mysql_var_loader.base_image }}"
+  container:
+    image: "{{ docker_registry.url }}/home-assistant-{{ _homeassistant_mysql_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _homeassistant_mysql_var_loader.base_image.tag }}"
     requests_cpu: "{{ homeassistant_mysql_container_requests_cpu | default('250m') }}"
     requests_memory: "{{ homeassistant_mysql_container_requests_memory | default('512Mi') }}"
     limits_cpu: "{{ homeassistant_mysql_container_limits_cpu | default('500m') }}"
