--- a/ansible/install_applications/vars/home-mosquitto.yml
+++ b/ansible/install_applications/vars/home-mosquitto.yml
@@ -1,11 +1,18 @@
 ---
 
+# To avoid loops inside mosquitto
+_mosquitto_var_loader:
+  base_image:
+    name: "eclipse-mosquitto"
+    tag: "1.6.4"
+
 mosquitto:
   enabled: "{{ mosquitto_enabled | default(True) }}"
 
+  base_image: "{{ _mosquitto_var_loader.base_image }}"
+
   container:
-    image: "eclipse-mosquitto"
-    tag: "1.6.4"
+    image: "{{ docker_registry.url }}/{{ _mosquitto_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _mosquitto_var_loader.base_image.tag }}"
     requests_cpu: "{{ mosquitto_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ mosquitto_container_requests_memory | default('32Mi') }}"
     limits_cpu: "{{ mosquitto_container_limits_cpu | default('200m') }}"
