--- a/ansible/install_applications/vars/home-roomassistant.yml
+++ b/ansible/install_applications/vars/home-roomassistant.yml
@@ -1,11 +1,18 @@
 ---
 
+# To avoid loops inside roomassistant
+_roomassistant_var_loader:
+  base_image:
+    name: "mkerix/room-assistant"
+    tag: "1.1.1"
+
 roomassistant:
   enabled: "{{ roomassistant_enabled | default(True) }}"
 
+  base_image: "{{ _roomassistant_var_loader.base_image }}"
+
   container:
-    image: "mkerix/room-assistant"
-    tag: "1.1.1"
+    image: "{{ docker_registry.url }}/{{ _roomassistant_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _roomassistant_var_loader.base_image.tag }}"
     requests_cpu: "{{ roomassistant_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ roomassistant_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ roomassistant_container_limits_cpu | default('250m') }}"
