--- a/ansible/install_applications/vars/stream-airsonic.yml
+++ b/ansible/install_applications/vars/stream-airsonic.yml
@@ -1,11 +1,18 @@
 ---
 
+# To avoid loops inside airsonic
+_airsonic_var_loader:
+  base_image:
+    name: "airsonic/airsonic"
+    tag: "10.4.0-RELEASE"
+
 airsonic:
   enabled: "{{ airsonic_enabled | default(True) }}"
 
+  base_image: "{{ _airsonic_var_loader.base_image }}"
+
   container:
-    image: "airsonic/airsonic"
-    tag: "10.4.0-RELEASE"
+    image: "{{ docker_registry.url }}/{{ _airsonic_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _airsonic_var_loader.base_image.tag }}"
     requests_cpu: "{{ airsonic_container_requests_cpu | default('250m') }}"
     requests_memory: "{{ airsonic_container_requests_memory | default('512Mi') }}"
     limits_cpu: "{{ airsonic_container_limits_cpu | default('500m') }}"
