--- a/ansible/install_applications/roles/stream-airsonic.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Ensure Airsonic image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    base_image: "{{ airsonic.base_image }}"
+    private_image: "{{ airsonic.container.image }}"
+
 - name: List config files
   set_fact:
     airsonic_config_files: "{{ airsonic_config_files | default([]) + [ item ] }}"
