--- a/ansible/install_applications/roles/dev-gitlab.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Ensure Gitlab image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    base_image: "{{ gitlab.base_image }}"
+    private_image: "{{ gitlab.container.image }}"
+
 - name: Deploy Gitlab
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
