--- a/ansible/install_applications/vars/download-deluge.yml
+++ b/ansible/install_applications/vars/download-deluge.yml
@@ -1,11 +1,18 @@
 ---
 
+# To avoid loops inside deluge
+_deluge_var_loader:
+  base_image:
+    name: "linuxserver/deluge"
+    tag: "amd64-2.0.3-2201906121747ubuntu18.04.1-ls36"
+
 deluge:
   enabled: "{{ deluge_enabled | default(True) }}"
 
+  base_image: "{{ _deluge_var_loader.base_image }}"
+
   container:
-    image: "linuxserver/deluge"
-    tag: "amd64-2.0.3-2201906121747ubuntu18.04.1-ls36"
+    image: "{{ docker_registry.url }}/{{ _deluge_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _deluge_var_loader.base_image.tag }}"
     requests_cpu: "{{ deluge_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ deluge_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ deluge_container_limits_cpu | default('200m') }}"
