--- a/ansible/install_applications/vars/download-pyload.yml
+++ b/ansible/install_applications/vars/download-pyload.yml
@@ -1,15 +1,25 @@
 ---
 
+# To avoid loops inside pyload
+_pyload_var_loader:
+  base_image:
+    name: "lsiobase/python"
+    tag: "amd64-3.10"
+  repo:
+    name: "pyload/pyload"
+    branch: "stable"
+    commit: "9f346c75e8a689eb4c9dae0c67209234892bf61e"
+
 pyload:
   enabled: "{{ pyload_enabled | default(True) }}"
 
+  base_image: "{{ _pyload_var_loader.base_image }}"
+  repo: "{{ _pyload_var_loader.repo }}"
+
   container:
-    image: "{{ docker_registry.url }}/pyload"
-    tag: "latest"
-    from_image: "lsiobase/python"
-    from_tag: "amd64-3.10"
-    branch: "stable"
-    commit: "9f346c75e8a689eb4c9dae0c67209234892bf61e"
+    image: "{{ docker_registry.url }}/pyload:{{ _pyload_var_loader.repo.commit }}-custom"
+    branch: "{{ _pyload_var_loader.repo.branch }}"
+    commit: "{{ _pyload_var_loader.repo.commit }}"
     requests_cpu: "{{ pyload_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ pyload_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ pyload_container_limits_cpu | default('200m') }}"
