--- a/ansible/install_applications/vars/download-sabnzbd.yml
+++ b/ansible/install_applications/vars/download-sabnzbd.yml
@@ -1,13 +1,18 @@
 ---
 
+# To avoid loops inside sabnzbd
+_sabnzbd_var_loader:
+  base_image:
+    name: "linuxserver/sabnzbd"
+    tag: "amd64-2.3.9-0ubuntu1jcfp118.04-u-ls29"
+
 sabnzbd:
   enabled: "{{ sabnzbd_enabled | default(True) }}"
 
+  base_image: "{{ _sabnzbd_var_loader.base_image }}"
+
   container:
-    image: "{{ docker_registry.url }}/sabnzbd"
-    tag: "latest"
-    from_image: "linuxserver/sabnzbd"
-    from_tag: "amd64-2.3.9-0ubuntu1jcfp118.04-u-ls29"
+    image: "{{ docker_registry.url }}/{{ _sabnzbd_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _sabnzbd_var_loader.base_image.tag }}-custom"
     requests_cpu: "{{ sabnzbd_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ sabnzbd_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ sabnzbd_container_limits_cpu | default('200m') }}"
