Fix ansible warning

--- a/ansible/install_infra/roles/kubernetes-master-bootstrap/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes-master-bootstrap/tasks/main.yml
@@ -42,7 +42,7 @@
 - name: Pass bridged IPv4 traffic to iptables’ chains
   sysctl:
     name: net.bridge.bridge-nf-call-iptables
-    value: 1
+    value: "1"
     state: present
 
 - name: Install flannel pod network add-on
