--- a/ansible/install_applications/roles/infra-dashboard.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-dashboard.deploy/tasks/main.yml
@@ -6,6 +6,12 @@
     base_image: "{{ kubernetes_dashboard.base_image }}"
     private_image: "{{ kubernetes_dashboard.container.image }}"
 
+- name: Ensure Kubernetes dashboard metrics scraper image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    base_image: "{{ kubernetes_dashboard_metrics_scraper.base_image }}"
+    private_image: "{{ kubernetes_dashboard_metrics_scraper.container.image }}"
+
 - name: Deploy Kubernetes dashboard
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
