--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/node_rules.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/node_rules.yaml
@@ -46,10 +46,10 @@ spec:
         )
       "record": "instance:node_memory_swap_io_pages:rate1m"
     - "expr": |
-        rate(node_disk_io_time_seconds_total{job="node", }[1m])
+        rate(node_disk_io_time_seconds_total{job="node", device!=""}[1m])
       "record": "instance_device:node_disk_io_time_seconds:rate1m"
     - "expr": |
-        rate(node_disk_io_time_weighted_seconds_total{job="node", }[1m])
+        rate(node_disk_io_time_weighted_seconds_total{job="node", device!=""}[1m])
       "record": "instance_device:node_disk_io_time_weighted_seconds:rate1m"
     - "expr": |
         sum without (device) (
