--- a/ansible/install_infra/roles/kubernetes-master-cni-prepare/meta/main.yml
+++ b/ansible/install_infra/roles/kubernetes-master-cni-prepare/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Prepare Kubernetes CNI Flannel"
+  description: "Prepare Kubernetes CNI"
   min_ansible_version: 2.7
   platforms:
   - name: Debian
