Add and enable Calico CNI

--- a/ansible/install_infra/roles/kubernetes-master-cni-deploy/defaults/main.yml
+++ b/ansible/install_infra/roles/kubernetes-master-cni-deploy/defaults/main.yml
@@ -4,7 +4,7 @@ kubernetes_user:
   name: "{{ standard_user.name }}"
   home: "{{ standard_user.home }}"
 
-kubernetes_cni: flannel
+kubernetes_cni: calico
 kubernetes_pod_network_cidr: 10.244.0.0/16
 
 # Flannel uses the interface associated with the default route by default.
