--- a/ansible/install_infra/roles/kubernetes-master-cni-prepare/vars/main.yml
+++ b/ansible/install_infra/roles/kubernetes-master-cni-prepare/vars/main.yml
@@ -11,3 +11,12 @@ kubernetes_cni_flannel_ufw_applications:
 #    description: Kubernetes Flannel udp
 #    ports: 8285/udp
 #    rule: allow
+
+
+# See https://docs.projectcalico.org/v3.9/getting-started/kubernetes/requirements
+kubernetes_cni_calico_ufw_applications:
+  - name: kubernetes_calico
+    title: Kubernetes Calico
+    description: Kubernetes Calico
+    ports: 179/tcp
+    rule: allow
