--- a/ansible/install_infra/roles/kubernetes-master-cni-deploy/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes-master-cni-deploy/tasks/main.yml
@@ -3,3 +3,7 @@
 - name: Deploy Flannel CNI
   import_tasks: flannel.yml
   when: kubernetes_cni == 'flannel'
+
+- name: Deploy Calico CNI
+  import_tasks: calico.yml
+  when: kubernetes_cni == 'calico'
