Migrate infra-docker-registry to a dedicated namespace

--- a/ansible/install_applications/roles/infra-docker-registry.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Ensure Docker registry namespace exists
+  import_tasks: ../../_base.deploy/tasks/custom-namespace.yml
+  vars:
+    application_namespace: "{{ docker_registry.namespace }}"
+
 - name: Read certificate files
   slurp:
     src: "{{ item }}"
