--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Ensure Kubernetes metrics server namespace exists
+  import_tasks: ../../_base.deploy/tasks/custom-namespace.yml
+  vars:
+    application_namespace: "{{ kubernetes_metrics_server.namespace }}"
+
 - name: Ensure Kubernetes metrics server image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
