Migrate infra-kubernetes-dashboard to a dedicated namespace

--- a/ansible/install_applications/app-infra-kubernetes-dashboard.yml
+++ b/ansible/install_applications/app-infra-kubernetes-dashboard.yml
@@ -3,4 +3,4 @@
 - name: Provision infra-dashboard
   hosts: controller
   roles:
-  - role: infra-dashboard.deploy
+  - role: infra-kubernetes-dashboard.deploy
