--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Ensure Kubernetes dashboard namespace exists
+  import_tasks: ../../_base.deploy/tasks/custom-namespace.yml
+  vars:
+    application_namespace: "{{ kubernetes_dashboard.namespace }}"
+
 - name: Ensure Kubernetes dashboard image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
