--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -8,8 +8,8 @@
   tags: kubernetes-app-infra-kubernetes-metrics-server
   when: kubernetes_metrics_server_enabled | bool
 
-- import_playbook: app-infra-dashboard.yml
-  tags: kubernetes-app-infra-dashboard
+- import_playbook: app-infra-kubernetes-dashboard.yml
+  tags: kubernetes-app-infra-kubernetes-dashboard
   when: kubernetes_dashboard_enabled | bool
 
 - import_playbook: app-infra-reloader.yml
