--- a/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/clusterRole.yaml
+++ b/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/clusterRole.yaml
@@ -2,7 +2,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: reloader-role
-  namespace: default
   labels:
     app: reloader
 rules:
@@ -16,12 +15,21 @@ rules:
       - get
       - watch
   - apiGroups:
-      - "extensions"
       - "apps"
     resources:
       - deployments
       - daemonsets
       - statefulsets
+    verbs:
+      - list
+      - get
+      - update
+      - patch
+  - apiGroups:
+      - "extensions"
+    resources:
+      - deployments
+      - daemonsets
     verbs:
       - list
       - get
