--- a/ansible/install_applications/vars/infra-zonemta.yml
+++ b/ansible/install_applications/vars/infra-zonemta.yml
@@ -36,7 +36,7 @@ zonemta:
     
   forward:
     # Forward to Mailhog by default
-    mta_host: "{{ zonemta_forward_mta_host | default('mailhog.default.svc.cluster.local') }}"
+    mta_host: "{{ zonemta_forward_mta_host | default(mailhog.servername) }}"
     mta_port: "{{ zonemta_forward_mta_port | default(1025) }}"
     mta_auth_enabled: "{{ zonemta_forward_mta_auth_enabled | default(false) }}"
     mta_user: "{{ zonemta_forward_mta_user | default('') }}"
