--- a/ansible/install_infra/roles/apcups/tasks/main.yml
+++ b/ansible/install_infra/roles/apcups/tasks/main.yml
@@ -24,6 +24,15 @@
     state: started
     enabled: yes
 
+- name: Create Kubernetes namespace
+  k8s:
+    api_version: v1
+    kind: Namespace
+    name: monitoring-apcups-exporter
+    state: present
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
+
 - name: Create Kubernetes service
   k8s:
     definition: "{{ lookup('template', 'kubernetes/' + item) }}"
