--- a/ansible/install_applications/vars/auth-openldap.yml
+++ b/ansible/install_applications/vars/auth-openldap.yml
@@ -5,6 +5,7 @@ _openldap_var_loader:
   base_image:
     name: "osixia/openldap"
     tag: "1.3.0-amd64"
+  namespace: "auth-openldap"
   
   basedn: "{{ openldap_ldap_basedn | default('dc=example,dc=org') }}"
   readonly_user_username: "{{ openldap_ldap_readonly_user_username | default('readonly') }}"
@@ -12,6 +13,7 @@ _openldap_var_loader:
 openldap:
   enabled: "{{ openldap_enabled | default(True) }}"
 
+  namespace: "{{ _openldap_var_loader.namespace }}"
   base_image: "{{ _openldap_var_loader.base_image }}"
 
   container:
@@ -22,8 +24,7 @@ openldap:
     limits_memory: "{{ openldap_container_limits_memory | default('128Mi') }}"
   
   ldap:
-    # OpenLDAP sererver name. We use the Kubernetes [service].[namespace] format
-    servername: "{{ openldap_ldap_servername | default('openldap.default') }}"
+    servername: "{{ openldap_ldap_servername | default('openldap.' + _openldap_var_loader.namespace + '.svc.cluster.local') }}"
     organisation: "{{ openldap_ldap_organisation | default('Example Inc.') }}"
     domain: "{{ openldap_ldap_domain | default('example.org') }}"
     # if empty automatically set from LDAP_DOMAIN
