Migrate auth-lemonldap to a dedicated namespace

--- a/ansible/install_applications/vars/auth-lemonldap.yml
+++ b/ansible/install_applications/vars/auth-lemonldap.yml
@@ -9,6 +9,7 @@ _lemonldap_var_loader:
 lemonldap:
   enabled: "{{ lemonldap_enabled | default(True) }}"
 
+  namespace: "auth-lemonldap"
   base_image: "{{ _lemonldap_var_loader.base_image }}"
 
   container:
